bs-batteries moved up

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@pckilgore/bs-biginteger": "^1.0.1",
     "@roddynpm/bs-yojson": "^0.3.0",
     "big-integer": "^1.6.48",
-    "bs-batteries": "^0.0.14",
+    "bs-batteries": "git+https://github.com/prozacchiwawa/bs-batteries#fstar"
     "bs-zarith": "^3.1.0"
   }
 }
